# Practica

./: 1_Iteration.cpp  README.md  test_branch_git.sln
1_iteration_cmake/: CMakeLists.txt
1_iteration_cmake/ExpenseTrackerLib/: CMakeLists.txt  ExpenseTracker.cpp
ConsoleVersion/: main.cpp
ConsoleVersion/ExpenseTrackerLib/: ExpenseTracker.h
QTVersion/: CMakeLists.txt  Header.h  Source.cpp  expenseCategories.txt  incomeCategories.txt  main.cpp
demo_Grafic_Inter/: main.cpp
untitled1/: CMakeLists.txt  main.cpp  mainwindow.ui  resource1.qrc
